--- a/styles.css
+++ b/styles.css
@@ -2,55 +2,75 @@
     width: 600px;
     margin-left: auto;
     margin-right: auto;
-    font-family: 'open sans'
-    } 
-   
-    h1 {
-        text-align: center        
-    }
-   
-    
-    .newsletter {
-        color:grey;
-        text-align: left;
-        padding-bottom: 20px;
-        position: relative;
-    }
-    .newsletter button{
-        background-color: #3cb878;
-        color: white;
-        border: none;
-        display: block;
-        width: 100%;
-        height: 30px;
-        margin-bottom: 10px;
-        
-    }
-    .newsletter input{
-        display: block;
-        width: 99%;
-        height: 30px;
-        margin-bottom: 4px;
-        border:grey solid 1px;
-        border-radius: 3px;
-        padding: 0px;
-    }
-    button:hover{
-        background-color: yellowgreen;
-    }
-    .newsletter #terms {
-        position : relative;
-        top : 1px;
-    }
-    .newsletter #closex{
-        position : absolute;
-        top : 0;
-        right: 4px;
-    }
-    
-    html
-    {   font-family: 'Open Sans', sans-serif;
-    text-align: center;
-    }
+}
+.newsletter {
+    color: grey;
+    border: solid thin #cfcfcf;
+    padding: 10px;
+    border-radius: 3px;
+    padding-bottom: 20px;
+    position: relative;
+}
+.newsletter button {
+    background-color: #3cb878;
+    color: white;
+    border: none;
+    display: block;
+    width: 100%;
+    height: 30px;
+    margin-bottom: 10px;
+}
+.newsletter input#email{
+    display: block;
+    width: 100%;
+    height: 30px;
+    margin-bottom: 4px;
+    border: solid #cfcfcf 1px;
+    border-radius: 3px;
+    padding: 0px;
+}
+.newsletter #terms{
+    position: relative;
+    top: 1px;
+}
+.newsletter #closex {
+    position: absolute;
+    top: 0;
+    right: 4px;
 
-    
+}
+.newsletter h3{
+    margin-top:0px;
+}
+button:hover{
+    background-color: rgb(106, 177, 0);
+    cursor: pointer;
+}       
+h1 {
+    text-align:center;
+}
+html {
+    font-family: 'Open Sans', sans-serif;
+}
+#questionmark {
+    box-shadow: 0px 0px 4px 4px grey;
+    background-color: #3cb878;
+    width: 100px;
+    max-height: 100px;
+    border-radius: 50%;
+    font-size: 70px;
+    text-align: center;
+    color: white;
+    bottom:10px;
+    right: 10px;
+    position: fixed;
+}
+.card {
+    background-color: #3cb878;
+    text-align: center;
+    color: white;
+    width: 180px;
+    padding: 20px 0;
+    box-shadow: 5px 0px 15px 4px grey;
+    margin-bottom: 40px;
+}
